MDEV-14675 Questionable semantics of INTERVAL values in PARTITION BY system_time: converted into seconds

Use INTERVAL insead of seconds in Vers_part_info::interval.
Implementation converts 1 QUARTER to 3 MONTHs, and 1 WEEK to 7 DAYs.

partiton_info::vers_interval_exceed(): convert timestamp to MYSQL_TIME using
timezones, subtract INTERVAL honouring leap years and different month.

Reduce SYSTEM_TIME invervals to a subset which do not use microseconds.