sql/partition_info.h
@@ -38,14 +38,14 @@ struct st_ddl_log_memory_entry;
 struct Vers_part_info : public Sql_alloc
 {
   Vers_part_info() :
-    interval(0),
     limit(0),
     now_part(NULL),
     hist_part(NULL),
     stat_serial(0)
   {
+    bzero(&interval, sizeof(interval));
   }
-  Vers_part_info(Vers_part_info &src) :
+  Vers_part_info(const Vers_part_info &src) :
     interval(src.interval),
     limit(src.limit),
     now_part(NULL),
@@ -67,7 +67,25 @@ struct Vers_part_info : public Sql_alloc
     }
     return false;
   }
-  my_time_t interval;
+  interval_type get_interval_type() const
+  {
+    DBUG_ASSERT(!interval.second_part);
+    DBUG_ASSERT(!interval.neg);
+
+    if (interval.year)
+      return INTERVAL_YEAR;
+    if (interval.month)
+      return INTERVAL_MONTH;
+    if (interval.day)
+      return INTERVAL_DAY;
+    if (interval.hour)
+      return INTERVAL_HOUR;
+    if (interval.minute)
+      return INTERVAL_MINUTE;
+    DBUG_ASSERT(interval.second);
+    return INTERVAL_SECOND;
+  }
+  INTERVAL interval;
   ulonglong limit;
   partition_element *now_part;
   partition_element *hist_part;
@@ -462,19 +480,7 @@ public:
     DBUG_ASSERT(part);
     return vers_pruning_stat(fld, part->id);
   }
-  bool vers_interval_exceed(my_time_t max_time, partition_element *part= NULL)
-  {
-    DBUG_ASSERT(vers_info);
-    if (!vers_info->interval)
-      return false;
-    if (!part)
-    {
-      DBUG_ASSERT(vers_info->initialized());
-      part= vers_hist_part();
-    }
-    my_time_t min_time= vers_pruning_stat(Vers_pruning_stat::ROW_END, part).min_time();
-    return max_time - min_time > vers_info->interval;
-  }
+  bool vers_interval_exceed(my_time_t max_time, partition_element *part= NULL);
   bool vers_interval_exceed(partition_element *part)
   {
     return vers_interval_exceed(vers_pruning_stat(Vers_pruning_stat::ROW_END, part).max_time(), part);
